# fastapi-yt

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
app/application/auth/: commands.py
app/application/channels/: commands.py  queries.py
app/application/commands/: auth.py  channels.py  post_reactions.py  posts.py  subscriptions.py
app/application/common/: dto.py  jwt.py  pagination.py  sorting.py
app/application/playlists/: commands.py
app/application/post_comment_reactions/: commands.py
app/application/post_comments/: commands.py  dto.py  queries.py
app/application/posts/: commands.py  dto.py  queries.py
app/application/queries/: channels.py  subscriptions.py
app/application/subscriptions/: dto.py  queries.py
app/application/video_reactions/: commands.py
app/application/videos/: commands.py  dto.py  queries.py
app/core/configs/: __init__.py  auth.py  database.py  general.py  s3.py
app/domain/auth/: exceptions.py
app/domain/channels/: constants.py  entities.py  enums.py  exceptions.py  repositories.py  repository.py  services.py
app/domain/common/: constants.py  entities.py  enums.py  exceptions.py
app/domain/playlists/: constants.py  entities.py  enums.py  exceptions.py  repositories.py  services.py
app/domain/post_comment_reactions/: entities.py  exceptions.py  repositories.py  services.py
app/domain/post_comments/: entities.py  enums.py  exceptions.py  (+2 more)
app/utils/: base64url.py  get_datetime_utc_now.py  videos.py
docker_compose/: backend.yaml  storages.yaml
tests/: conftest.py
tests/mocks/: s3_provider.py
(+232 files in other folders)
