[project]
name = "fastapi-yt"
version = "0.1.0"
description = ""
authors = [
    {name = "henwix",email = "492b675xhpd1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "dishka (>=1.10.1,<2.0.0)",
    "msgspec (>=0.21.1,<0.22.0)"
]

[dependency-groups]
dev = [
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "testcontainers (>=4.14.2,<5.0.0)",
    "polyfactory (>=3.3.0,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["A003", "A002", "B904", "F821"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "sqlalchemy"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
